--- a/messeger/simple-chat/src/chat/css/chat.css
+++ b/messeger/simple-chat/src/chat/css/chat.css
@@ -16,4 +16,17 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    animation-name: openchat;
+    animation-duration: 0.25s;
+}
+
+@keyframes openchat {
+    from {
+        opacity: 0;
+        scale: 0;
+    }
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
 }
