--- a/messeger/simple-chat/src/index/css/button_create_chat.css
+++ b/messeger/simple-chat/src/index/css/button_create_chat.css
@@ -6,4 +6,23 @@
     border-radius: 50% 50%;
     padding: 10px;
     font-size: 40px;
+    animation: pulse 2s infinite;
+}
+.button-create-chat:hover{
+    cursor: pointer;
+    animation: none;
+}
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 228, 196, 0.8);
+        box-shadow: 0 0 0 0 rgba(255, 228, 196, 0.8);
+    }
+    50% {
+        -moz-box-shadow: 0 0 0 10px rgba(255, 228, 196, 0);
+        box-shadow: 0 0 0 10px rgba(255, 228, 196, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 228, 196, 0);
+        box-shadow: 0 0 0 0 rgba(255, 228, 196, 0);
+    }
 }
