--- a/chat.css
+++ b/chat.css
@@ -16,8 +16,20 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    animation-name: openchat;
+    animation-duration: 0.25s;
 }
 
+@keyframes openchat {
+    from {
+        opacity: 0;
+        scale: 0;
+    }
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+}
 .header {
     display: flex;
     flex-direction: row;
@@ -26,18 +38,73 @@ body{
     height: 100px;
     font-size: 24px;
 }
-.header > .name_of_chat{
-    flex: 1;
+.header > .name-of-chat{
+    flex: 85%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
     color: white;
 }
+.header > .name-of-chat > .name-of-chat-last-visited{
+    color: rgba(255, 255, 255, 0.7);
+}
+.header > .name-of-chat > .name-of-chat-user{
+    font-weight: bold;
+}
 .header > button {
+    margin: 10px;
+    flex: 4%;
     background-color: blueviolet;
     border: 0;
     color: white;
     font-size: 35px;
+}
+.header > .back-to-list-chat:hover{
+    animation: rotatebutton 1s;
+    animation-timing-function: linear;
+    background-color: transparent;
+}
+.header > button:active{
+    font-size: 30px;
+    border-radius: 50% 50%;
+    animation: pulse 0.2s;
+    animation-timing-function: linear;
+}
+@keyframes rotatebutton {
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    25%
+    {
+        transform: rotate(90deg);
+    }
+    50%
+    {
+        transform: rotate(180deg);
+    }
+    75%
+    {
+        transform: rotate(270deg);
+    }
+    100%
+    {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes pulse {
+    0%{
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
+    50%{
+        box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    100%{
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
 }
 .form {
     display: flex;
@@ -77,6 +144,9 @@ body{
     border-radius: 5px;
     margin-top: 10px;
     margin-right: 5px;
+    animation-name: messageanim;
+    animation-duration: 0.3s;
+    animation-direction: alternate;
 }
 .message_date {
     color: darkgray;
@@ -93,4 +163,16 @@ input {
     border: 0;
     outline: none;
     width: calc(100% - 2px);
+}
+
+@keyframes messageanim {
+    from
+    {
+        margin-right: 100%;
+    }
+    to
+    {
+       margin-right: 0%;
+    }
+
 }
