--- a/react-chat/src/components/Message/Message.module.css
+++ b/react-chat/src/components/Message/Message.module.css
@@ -11,8 +11,8 @@
     display: flex;
     flex-direction: column;
     background-color: bisque;
-    justify-content: end;
-    align-self: end;
+    justify-content: flex-end;
+    align-self: flex-end;
     padding: 5px;
     border-radius: 5px;
     margin-top: 10px;
@@ -24,7 +24,7 @@
 .message_date {
     color: darkgray;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 @keyframes messageanim {
     from
